--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.22.1",
     "next": "15.0.3",
+    "next-international": "^1.3.1",
     "react": "^18",
     "react-dom": "^18"
   },
